--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,8 +8,8 @@
   <div class="header-right">
     <!-- Mandat Selector -->
     <div *ngIf="(activeMandat$ | async) as selectedMandat" class="dropdown">
-      <button aria-expanded="false" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" id="mandatDropdown"
-              type="button">
+      <button aria-expanded="false" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+        id="mandatDropdown" type="button">
         {{ selectedMandat.nom }}
       </button>
       <ul aria-labelledby="mandatDropdown" class="dropdown-menu">
@@ -36,11 +36,11 @@
     <!-- User Profile -->
     <div class="dropdown">
       <button aria-expanded="false" class="btn btn-icon profile-button" data-bs-toggle="dropdown" id="profileDropdown"
-              type="button">
+        type="button">
         <span class="profile-avatar">U</span>
       </button>
       <ul aria-labelledby="profileDropdown" class="dropdown-menu dropdown-menu-end">
-        <li><a class="dropdown-item" href="#">Mon Profil</a></li>
+        <li><button class="dropdown-item" (click)="viewMyProfile()">Mon Profil</button></li>
         <li>
           <hr class="dropdown-divider">
         </li>
@@ -51,4 +51,3 @@
     </div>
   </div>
 </nav>
-
